2008-07-02  Thomas Koenig  <tkoenig@gcc.gnu.org>

PR fortran/36590
	PR fortran/36681
	* iresolve.c (resolve_mask_arg):  Don't convert mask to
	kind=1 logical if it is of that type already.

2008-07-02  Thomas Koenig  <tkoenig@gcc.gnu.org>

	PR fortran/36590
	PR fortran/36681
	* gfortran.dg/count_mask_1.f90:  New test.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@137355 138bc75d-0d04-0410-961f-82ee72b054a4